# minimal_object_notation

./: Cargo.toml  README.md
src/: lib.rs
